objects/Lawsuit_Package__c.object
<CustomObject>
    <fields>
        <fullName>Anfrage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Anfrage</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Klagepakete</relationshipLabel>
        <relationshipName>Klagepakete</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <externalId>true</externalId>
        <label>Bezeichnung</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Old_Klagepaket_ID__c</fullName>
        <label>Old Klagepaket ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Typ</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lawsuit_Package_Types</valueSetName>
        </valueSet>
    </fields>
    <label>Klagepaket</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Klagepakete</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>